2004-01-10    <jeff@mini.nerble.net>

	* gamemap.cc: create_ifix_object() added to create the right type
	of object.
	* files/utils.cc: Clone_system_path should check that entry
	exists.
	* exult.cc: Always set <PATCH>, defaulting to datadir/patch.

2004-01-06    <jeff@mini.nerble.net>

	* usecode/intrinsics.cc: Yet another intrinsic:  set_barge_dir().

2004-01-03    <jeff@mini.nerble.net>

	* gamerend.cc,chunks.cc:  Handle dungeons slightly differently to
	avoid black squares in SI Sunrise Isle area.  I'm assuming a
	certain shape (941 with frame 0) means "whole chunk is dungeon".

2004-01-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc, *game.cc: cleared up startup output a bit
	* audio/Midi.cc: show errors when unable to find .ogg files
	* actorio.cc: made the "NPC #x is unused" messages debug-only
	* exult.cc: changed default music path to music subdir of the
	current data path (instead of the hardcoded default data path)

2003-12-16    <jeff@mini.nerble.net>

	* Applied Debian signed-char patch.

2003-12-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* docs/xml/*: updated .xsl's to indent config file examples

2003-12-01    <jeff@mini.nerble.net>

	* gamemap.cc: Fixed map-editing bug involving cached-out superchunks.

2003-11-30    <jeff@mini.nerble.net>

	* mapedit/chunklst.cc, etc.: Added a 'delete' option for
	chunks.

2003-11-29    <jeff@mini.nerble.net>

	* usecode/ucinternal.h,intrinsics.cc:  Only force barge to do a
	'gather' when we've actually add/deleted/moved an object.

	* objs/egg.cc (Egg_object): Teleport eggs should not automatically
	reset (unless they have the auto_reset flag).

2003-11-28    <jeff@mini.nerble.net>

	* mapedit/npcedit.cc: Each schedule line now has a "Game" entry
	that sets the location from where the Avatar is standing.

2003-11-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* cheat_screen.cc: don't show unimplemented options
