@@ -1,3 +1,6 @@
+2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* files/utils.cc: make sure path_map contains no invalid/empty entries
+
 2004-01-10    <jeff@mini.nerble.net>
 
 	* gamemap.cc: create_ifix_object() added to create the right type
